# OzCore

./: .gitattributes  .gitignore  .readthedocs.yaml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  config.py  ozcore.code-workspace  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: manual_publish_package.yaml  manual_publish_package.yml  poetry-publish-on-version-tag.yml  python-publish-with-version-tag.yml
docs/: conf.py  dev_environment.rst  docs-requirements.txt  index.rst  module_core.rst  requirements.txt
docs/_static/css/: custom.css
docs/_templates/: layout.html
docs/mod_core/: 01.00.helpers.rst  01.00.utils.rst  03.00.jupyter.rst  04.00.path_folders.rst  04.00path_folders.rst  04.01.path_tmp.rst  05.00.dummy.rst  06.00.dataframe.rst  07.00.csv.rst  08.00.sqlite.rst  09.00.qGrid.rst  10.00.aggrid.rst  11.00.office_docx.rst
ozcore/: __init__.py  _version.py
ozcore/core/: __init__.py  helpers.py  jupyter.py
ozcore/core/aggrid/: __init__.py  aggrid.py
ozcore/core/data/: __init__.py  dataframe.py  dummy.py
ozcore/core/data/csv/: __init__.py  base.py  process.py
ozcore/core/data/sqlite/: __init__.py  orm.py  sqlite.py
ozcore/core/df/: __init__.py  dataframe.py  dummy.py  pareto_ranking.py
ozcore/core/office/: __init__.py
ozcore/core/office/docx/: docx.py
ozcore/core/path/: __init__.py  folders.py  tmp_folders.py
ozcore/core/qgrid/: base.py  grid.py  view.py
ozcore/core/utils/: __import_check.py  __init__.py  helper.py  html_markdown.py  jupyter.py  temporal.py  zipper.py
tests/: conftest.py  test_aggrid.py  test_check_modules.py  test_csv.py  test_dataframe.py  test_docx.py  test_dummy.py  test_helper.py  test_helpers.py  test_html_markdown.py  test_jupyter.py  test_ozcore.py  test_paretoranking.py  test_path.py  test_path_folders.py  test_qgrid.py  test_sql.py  test_tempo.py  test_xlwings.py  test_zipper.py
tests/test_folder/: sample.toml  sample.yaml  sample1.docx  sample2.doc
