[tool.poetry]
name = "ozcore"
version = "1.1.15.post41.dev0+59edf16" # will be overwritten by poetry-dynamic-versioning 
description = "My core."
authors = ["Ozgur Kalan <ozgurkalan@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/ozgurkalan/OzCore"
homepage = "https://ozcore.readthedocs.io/"
license = "GPL-3.0-or-later"
classifiers =[
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Intended Audience :: Developers',
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
] 

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
numpy = "^1.20.1"
pandas = "^1.2.3"
Faker = "^16.6.0"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
SQLAlchemy = "^1.4.2"
alembic = "^1.9.2"
requests = "^2.25.1"
lxml = "^4.6.3"
html5lib = "^1.1"
html2text = "^2020.1.16"
markdown2 = "^2.4.0"
ipyaggrid = "^0.2.1"
ipykernel = "^5.5.0"
nbformat = "^5.1.2"
jupyter-contrib-nbextensions = "^0.5.1"
typeguard = "^2.13.3"
typer = "^0.3.2"
tqdm = "^4.60.0"
pytest = "^7.2.1"
pytest-httpserver = "^1.0.0"
pytest-cov = "^2.11.1"
pytest-remotedata = "^0.3.2"
black = "^20.8b1"
setuptools = "^54.1.3"
tox = "^3.23.0"
dunamai = "^1.5.4"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^0.5.1"
sphinxcontrib-napoleon = "^0.7"
rstcheck = "^3.3.1"
recommonmark = "^0.7.1"
ipywidgets = "7.6.5"
myst-parser = "0.18.1"
sphinx = "5.3.0"
isort = "^5.12.0"
xlwings = "^0.29.0" 
poetry-dynamic-versioning = "^0.21.3"


[tool.poetry.extras]
test = ["pytest"]
docs = ["Sphinx", "sphinx-autobuild", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "myst-parser", "rstcheck", "recommonmark"]




[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.black]
target-version = ['py36', 'py37', 'py38']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[build-system]
requires = ["poetry-core>=1.3.2", "setuptools", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
