[tool.poetry]
name = "ozcore"
version = "2.0.2" # will be overwritten by poetry-dynamic-versioning 
description = "My core."
authors = ["Ozgur Kalan <ozgurkalan@gmail.com>"]
readme = "README.rst"
repository = "https://github.com/ozgurkalan/OzCore"
homepage = "https://ozcore.readthedocs.io/"
license = "GPL-3.0-or-later"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Software Development :: Libraries :: Python Modules",
  'Intended Audience :: Developers',
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.9"
typeguard = { version = "^3.0.2", optional = false }
typer = { version = "^0.7.0", optional = false }
sqlalchemy = { version = "1.4.46", optional = false }
alembic = { version = "^1.10.2", optional = false }
numpy = { version = "^1.24.2", optional = false }
pandas = { version = "^1.5.3", optional = false }
matplotlib = { version = "^3.7.1", optional = true }
faker = { version = "^18.3.1", optional = true }
tqdm = { version = "^4.65.0", optional = true }
dynaconf = {version = "^3.1.12", optional = true}
seaborn = { version = "^0.12.2", optional = true }
lxml = { version = "^4.9.2", optional = true }
requests = { version = "^2.28.2", optional = true }
ipyaggrid = { version = "^0.3.2", optional = true }
html5lib = { version = "^1.1", optional = true }
html2text = { version = "^2020.1.16", optional = true }
markdown2 = { version = "^2.4.8", optional = true }
ipykernel = { version = "^6.22.0", optional = true }
ipywidgets = { version = "^8.0.6", optional = true }
nbformat = { version = "^5.8.0", optional = true }
jupyter-contrib-nbextensions = {version = "^0.7.0", optional = true}
pydantic = {version = "^1.10.7", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-httpserver = "^1.0.0"
pytest-cov = "^2.11.1"
pytest-remotedata = "^0.3.2"
black = "^20.8b1"
tox = "^3.23.0"
isort = "^5.12.0"
dunamai = "^1.5.4"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^0.5.1"
sphinxcontrib-napoleon = "^0.7"
rstcheck = "^3.3.1"
recommonmark = "^0.7.1"
myst-parser = "0.18.1"
sphinx = "5.3.0"
poetry-dynamic-versioning = "^0.21.3"
setuptools = "^54.1.3"


[tool.poetry.extras]
all = [
  "numpy",
  "pandas",
  "sqlalchemy",
  "alembic",
  "pydantic",
  "requests",
  "tqdm",
  "typer",
  "dynaconf",
  "faker",
  "typeguard",
  "matplotlib",
  "seaborn",
  "lxml",
  "html5lib",
  "html2text",
  "markdown2",
  "ipykernel",
  "ipywidgets",
  "nbformat",
  "ipyaggrid",
  "jupyter-contrib-nbextensions",
]



[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.black]
target-version = ['py36', 'py37', 'py38']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''

[build-system]
requires = ["poetry-core>=1.3.2", "setuptools", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
