[metadata]
name = ozcore
summary = OzCore is my core.

url = https://github.com/ozgurkalan/OzCore

author = Ozgur Kalan
author-email = ozgurkalan@gmail.com
license = GPLv3+

platform = darwin

description-file =
    README.rst

license_files =
    LICENSE.md

classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Operating System :: MacOS
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

requires-dist = setuptools


[versioneer]
VCS = git
style = pep440
versionfile_source = ozcore/_version.py
versionfile_build = ozcore/_version.py
tag_prefix = v
parentdir_prefix = ozcore-